--- a/Semana-06/styles/login.css
+++ b/Semana-06/styles/login.css
@@ -1,5 +1,5 @@
 .all{
-    height: 45vh;
+    height: 60vh;
 }
 
 .login{
@@ -8,8 +8,8 @@
     box-sizing: border-box;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 200px;
-    width: 60%;
+    margin-top: 100px;
+    max-width: 50%;
 }
 
 .login h2{
@@ -37,3 +37,43 @@
     align-self: center;
     margin-bottom: 0;
 }
+
+.validation{
+    border: 1px solid green;
+}
+
+.negation{
+    border: 1px solid red;
+}
+
+.overlay {
+    position: absolute;
+    display: none;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background: rgba(0, 0, 0, 0.8);
+    z-index: 2;
+  }
+
+  .popup {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 50%;
+    height: 25%;
+    top: 25%;
+    left: 25%;
+    box-sizing: border-box;
+    padding-top: 50px;
+    text-align: center;
+    background: white;
+  }
+ 
+  .popup span {
+    font-size: 15px;
+    height: 50px;
+    color: black;
+  }
