--- a/Semana-06/views/employee-signup.html
+++ b/Semana-06/views/employee-signup.html
@@ -92,28 +92,39 @@
                             <div class="form1">
                                 <label for="name">Name</label>
                                 <input id="name" type="text">
+                                <div class="name-alert"></div>
                                 <label for="surname">Last name</label>
                                 <input id="surname" type="text">
+                                <div class="surname-alert"></div>
                                 <label for="dni">DNI</label>
-                                <input id="dni" type="number">
+                                <input id="dni" type="text">
+                                <div class="dni-alert"></div>
                                 <label for="dob">Date of birth</label>
-                                <input id="dob" type="date">
+                                <input id="dob" type="text">
+                                <div class="dob-alert"></div>
                                 <label for="phone">Phone</label>
-                                <input id="phone" type="number">
+                                <input id="phone" type="text">
+                                <div class="phone-alert"></div>
                                 <label for="adress">Adress</label>
                                 <input id="adress" type="text">
+                                <div class="adress-alert"></div>
                             </div>
                             <div class="form2">
                                 <label for="city">City</label>
-                                <input id="mail" type="email">
+                                <input id="city" type="text">
+                                <div class="city-alert"></div>
                                 <label for="zip-code">ZIP code</label>
-                                <input id="zip-code" type="number">
+                                <input id="zip-code" type="text">
+                                <div class="zip-code-alert"></div>
                                 <label for="mail">Email</label>
-                                <input id="mail" type="email">
+                                <input id="mail" type="text">
+                                <div class="mail-alert"></div>
                                 <label for="password">Password</label>
                                 <input id="password" type="password">
+                                <div class="password-alert"></div>
                                 <label for="re-password">Repeat password</label>
                                 <input id="re-password" type="password">
+                                <div class="re-password-alert"></div>
                             </div>
                         </form>
                         <button id="su-button">Create</button>
@@ -200,5 +211,6 @@
                 <img src="../assets/icons/facebook-brands.svg" alt="facebook logo" height="25px" width="25px">
             </a>
         </footer>
+        <script src="../javascript/employee-signup.js"></script>
     </body>
 </html>
