BaSP-W06-M2022: finished modal code, all working fine, lacking focus event

--- a/Semana-06/views/employee-signup.html
+++ b/Semana-06/views/employee-signup.html
@@ -126,6 +126,23 @@
                                 <input id="re-password" type="password">
                                 <div class="re-password-alert"></div>
                             </div>
+                            <div class="overlay" id="overlay">
+                                <div class="popup">
+                                  <div class="closeIcon"></div>
+                                  <span id="name-checked"></span>
+                                  <span id="surname-checked"></span>
+                                  <span id="dni-checked"></span>
+                                  <span id="dob-checked"></span>
+                                  <span id="phone-checked"></span>
+                                  <span id="adress-checked"></span>
+                                  <span id="city-checked"></span>
+                                  <span id="zip-code-checked"></span>
+                                  <span id="mail-checked"></span>
+                                  <span id="pass-checked"></span>
+                                  <span id="re-pass-checked"></span>
+                                  <button id="button-7">Back</button>
+                                </div>
+                            </div>
                         </form>
                         <button id="su-button">Create</button>
                     </div>
