--- a/Semana-06/views/login.html
+++ b/Semana-06/views/login.html
@@ -100,7 +100,7 @@
                     </div>
                     <div class="overlay" id="overlay">
                         <div class="popup">
-                          <div class="CloseIcon"></div>
+                          <div class="closeIcon"></div>
                           <span id="mail-checked"></span>
                           <span id="pass-checked"></span>
                           <button id="button-6">Back</button>
