BaSP-W06-M2022: finished navigation between pages, updated sign up form style

--- a/Semana-06/styles/sidebar.css
+++ b/Semana-06/styles/sidebar.css
@@ -24,6 +24,12 @@ nav div input {
     background-color: rgb(55,56,103);
 }
 
+.navigate{
+    text-decoration: none;
+    text-transform: uppercase;
+    color: white;
+}
+
 .buttons {
     display: flex;
     justify-content: space-evenly;
