--- a/Semana-06/views/landing.html
+++ b/Semana-06/views/landing.html
@@ -24,11 +24,12 @@
             <div class="input-buttons">
                 <input type="text" placeholder="Search">
                 <div class="buttons">
-                    <button>
-                        Log In
+                    <button id="button-1">
+                        <a class="navigate" href="../views/login.html">Log In</a>
                     </button>
                     <button id="button-2">
-                        Sign Up
+                        <a class="navigate" href="../views/employee-signup.html">Sign up</a>
+                    </button>
                     </button>
                 </div>
             </div>
