--- a/Semana-06/styles/styles.css
+++ b/Semana-06/styles/styles.css
@@ -231,6 +231,12 @@ body {
         font-size: 16px;
     }
 
+    /*sign up form*/
+    .sign-up{
+        height: 75%;
+        font-size: 14px;
+    }
+
     .signup-form{
         flex-direction: row;
         flex-wrap: wrap;
@@ -241,4 +247,9 @@ body {
         width: 45%;
         height: 300px;
     }
+
+    #su-button{
+        margin-top: 150px;
+    }
 }
+
