--- a/Semana-06/views/login.html
+++ b/Semana-06/views/login.html
@@ -25,11 +25,11 @@
             <div class="input-buttons">
                 <input type="text" placeholder="Search">
                 <div class="buttons">
-                    <button>
-                        Log In
+                    <button id="button-1">
+                        <a class="navigate" href="../views/login.html">Log In</a>
                     </button>
                     <button id="button-2">
-                        Sign Up
+                        <a class="navigate" href="../views/employee-signup.html">Sign up</a>
                     </button>
                 </div>
             </div>
@@ -38,16 +38,16 @@
                     Menu
                 </span>
                 <div class="links">
-                    <a href="#home">
+                    <a href="../views/landing.html#home">
                         Homepage
                     </a>
-                    <a href="#features">
+                    <a href="../views/landing.html#features">
                         Features
                     </a>
-                    <a href="#why-trackgenix">
+                    <a href="../views/landing.html#why-trackgenix">
                         Why Trackgenix?
                     </a>
-                    <a href="#contact-us">
+                    <a href="../views/landing.html#contact-us">
                         Contact Us
                     </a>
                 </div>
