BaSP-W06-M2022: finished js logic of all forms, all working great

--- a/Semana-06/views/employee-signup.html
+++ b/Semana-06/views/employee-signup.html
@@ -38,16 +38,16 @@
                     Menu
                 </span>
                 <div class="links">
-                    <a href="../views/landing.html#home">
+                    <a href="../views/index.html#home">
                         Homepage
                     </a>
-                    <a href="../views/landing.html#features">
+                    <a href="../views/index.html#features">
                         Features
                     </a>
-                    <a href="../views/landing.html#why-trackgenix">
+                    <a href="../views/index.html#why-trackgenix">
                         Why Trackgenix?
                     </a>
-                    <a href="../views/landing.html#contact-us">
+                    <a href="../views/index.html#contact-us">
                         Contact Us
                     </a>
                 </div>
