BaSP-W06-M2022: finished js code, reviewed it to match good practice guide, added readme

--- a/Semana-06/views/employee-signup.html
+++ b/Semana-06/views/employee-signup.html
@@ -90,39 +90,61 @@
                         <h2>sign up</h2>
                         <form action="" class="signup-form">
                             <div class="form1">
-                                <label for="name">Name</label>
+                                <label for="name">
+                                    Name
+                                </label>
                                 <input id="name" type="text">
                                 <div class="name-alert"></div>
-                                <label for="surname">Last name</label>
+                                <label for="surname">
+                                    Last name
+                                </label>
                                 <input id="surname" type="text">
                                 <div class="surname-alert"></div>
-                                <label for="dni">DNI</label>
+                                <label for="dni">
+                                    DNI
+                                </label>
                                 <input id="dni" type="text">
                                 <div class="dni-alert"></div>
-                                <label for="dob">Date of birth</label>
+                                <label for="dob">
+                                    Date of birth
+                                </label>
                                 <input id="dob" type="text">
                                 <div class="dob-alert"></div>
-                                <label for="phone">Phone</label>
+                                <label for="phone">
+                                    Phone
+                                </label>
                                 <input id="phone" type="text">
                                 <div class="phone-alert"></div>
-                                <label for="adress">Adress</label>
+                                <label for="adress">
+                                    Adress
+                                </label>
                                 <input id="adress" type="text">
                                 <div class="adress-alert"></div>
                             </div>
                             <div class="form2">
-                                <label for="city">City</label>
+                                <label for="city">
+                                    City
+                                </label>
                                 <input id="city" type="text">
                                 <div class="city-alert"></div>
-                                <label for="zip-code">ZIP code</label>
+                                <label for="zip-code">
+                                    ZIP code
+                                </label>
                                 <input id="zip-code" type="text">
                                 <div class="zip-code-alert"></div>
-                                <label for="mail">Email</label>
+                                <label for="mail">
+                                    Email
+                                </label>
                                 <input id="mail" type="text">
                                 <div class="mail-alert"></div>
-                                <label for="password">Password</label>
+                                <label for="password">
+                                    Password
+                                </label>
                                 <input id="password" type="password">
                                 <div class="password-alert"></div>
-                                <label for="re-password">Repeat password</label>
+                                <label for="re-password">
+                                    Repeat password
+                                </label>
                                 <input id="re-password" type="password">
                                 <div class="re-password-alert"></div>
                             </div>
