--- a/Semana-06/views/login.html
+++ b/Semana-06/views/login.html
@@ -89,13 +89,19 @@
                     <div class="login">
                         <h2>log in</h2>
                         <form action="" class="login-form">
-                            <label for="mail">Enter your email</label>
+                            <label for="mail">
+                                Enter your email
+                            </label>
                             <input id="mail" type="text">
                             <div class="mail-alert"></div>
-                            <label for="password">Enter your password</label>
+                            <label for="password">
+                                Enter your password
+                            </label>
                             <input id="password" type="password">
                             <div class="password-alert"></div>
-                            <button id="login-button" type="button">Log in</button>
+                            <button id="login-button" type="button">
+                                Log in
+                            </button>
                         </form>
                     </div>
                     <div class="overlay" id="overlay">
@@ -103,7 +109,9 @@
                           <div class="closeIcon"></div>
                           <span id="mail-checked"></span>
                           <span id="pass-checked"></span>
-                          <button id="button-6">Back</button>
+                          <button id="button-6">
+                              Back
+                            </button>
                         </div>
                     </div>
                 </section>
