--- a/Semana-06/views/employee-signup.html
+++ b/Semana-06/views/employee-signup.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="../styles/reset.css">
-        <link rel="stylesheet" href="../styles/main.css">
+        <link rel="stylesheet" href="../styles/landing.css">
         <link rel="stylesheet" href="../styles/sidebar.css">
         <link rel="stylesheet" href="../styles/header.css">
         <link rel="stylesheet" href="../styles/footer.css">
@@ -93,44 +93,44 @@
                                 <label for="name">
                                     Name
                                 </label>
-                                <input id="name" type="text">
+                                <input id="name" type="text" placeholder="Must have more than 3 characters">
                                 <div class="name-alert"></div>
                                 <label for="surname">
                                     Last name
                                 </label>
-                                <input id="surname" type="text">
+                                <input id="surname" type="text" placeholder="Must have more than 3 characters">
                                 <div class="surname-alert"></div>
                                 <label for="dni">
                                     DNI
                                 </label>
-                                <input id="dni" type="text">
+                                <input id="dni" type="text" placeholder="Must have more than 7 numbers">
                                 <div class="dni-alert"></div>
                                 <label for="dob">
                                     Date of birth
                                 </label>
-                                <input id="dob" type="text">
+                                <input id="dob" type="text" placeholder="dd/mm/yyyy">
                                 <div class="dob-alert"></div>
                                 <label for="phone">
                                     Phone
                                 </label>
-                                <input id="phone" type="text">
+                                <input id="phone" type="text" placeholder="Must have 10 numbers">
                                 <div class="phone-alert"></div>
                                 <label for="adress">
                                     Adress
                                 </label>
-                                <input id="adress" type="text">
+                                <input id="adress" type="text" placeholder="Must have at least 5 characters including numbers">
                                 <div class="adress-alert"></div>
                             </div>
                             <div class="form2">
                                 <label for="city">
                                     City
                                 </label>
-                                <input id="city" type="text">
+                                <input id="city" type="text" placeholder="Must have more than 3 characters">
                                 <div class="city-alert"></div>
                                 <label for="zip-code">
                                     ZIP code
                                 </label>
-                                <input id="zip-code" type="text">
+                                <input id="zip-code" type="text" placeholder="Must have between 4 or 5 numbers">
                                 <div class="zip-code-alert"></div>
                                 <label for="mail">
                                     Email
@@ -140,7 +140,7 @@
                                 <label for="password">
                                     Password
                                 </label>
-                                <input id="password" type="password">
+                                <input id="password" type="password" placeholder="Must have at least 8 characters including numbers">
                                 <div class="password-alert"></div>
                                 <label for="re-password">
                                     Repeat password
