BaSP-W07-M2022: created new folders, finished log in fetch logic, all working great

--- a/Semana-07/views/login.html
+++ b/Semana-07/views/login.html
@@ -107,6 +107,7 @@
                     <div class="overlay" id="overlay">
                         <div class="popup">
                           <div class="closeIcon"></div>
+                          <span id="login-checked"></span>
                           <span id="mail-checked"></span>
                           <span id="pass-checked"></span>
                           <button id="button-6">
