BaSP-W07-M2022: attempt at sign up fetch function

--- a/Semana-07/views/employee-signup.html
+++ b/Semana-07/views/employee-signup.html
@@ -151,6 +151,7 @@
                             <div class="overlay" id="overlay">
                                 <div class="popup">
                                   <div class="closeIcon"></div>
+                                  <span id="login-checked"></span>
                                   <span id="name-checked"></span>
                                   <span id="surname-checked"></span>
                                   <span id="dni-checked"></span>
