--- a/Semana-07/views/login.html
+++ b/Semana-07/views/login.html
@@ -88,7 +88,7 @@
                 <section class="all">
                     <div class="login">
                         <h2>log in</h2>
-                        <form action="" class="login-form">
+                        <form class="login-form">
                             <label for="mail">
                                 Enter your email
                             </label>
@@ -106,7 +106,6 @@
                     </div>
                     <div class="overlay" id="overlay">
                         <div class="popup">
-                          <div class="closeIcon"></div>
                           <span id="login-checked"></span>
                           <span id="mail-checked"></span>
                           <span id="pass-checked"></span>
