--- a/Semana-07/styles/employee-signup.css
+++ b/Semana-07/styles/employee-signup.css
@@ -33,11 +33,23 @@
 }
 
 .signup-form label{
-    padding: 5px 0;
+    padding: 3px 0;
 }
 
 #su-button{
+    width: auto;
     margin-left: 40%;
+    font-size: 14px;
+    font-weight: bold;
+    text-align: center;
+    text-transform: uppercase;
+}
+
+#button-7{
+    font-size: 14px;
+    font-weight: bold;
+    text-align: center;
+    text-transform: uppercase;
 }
 
 .validation{
@@ -51,6 +63,7 @@
 .overlay {
     position: absolute;
     display: none;
+    height: 200vh;
     top: 0;
     right: 0;
     bottom: 0;
@@ -65,10 +78,11 @@
     flex-direction: column;
     align-items: center;
     width: 50%;
-    height: 50%;
-    top: 25%;
+    height: 25%;
+    top: 10%;
     left: 25%;
     box-sizing: border-box;
+    border-radius: 15px;
     padding-top: 50px;
     text-align: center;
     background: white;
@@ -79,3 +93,9 @@
     font-size: 15px;
     color: black;
   }
+
+.form1 div, .form2 div {
+    color: red;
+    height: 15px;
+    font-size: 13px;
+}  
