--- a/Semana-07/styles/login.css
+++ b/Semana-07/styles/login.css
@@ -49,6 +49,7 @@
 .overlay {
     position: absolute;
     display: none;
+    height: 200vh;
     top: 0;
     right: 0;
     bottom: 0;
@@ -62,11 +63,12 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 50%;
-    height: 25%;
-    top: 25%;
-    left: 25%;
+    width: 40%;
+    height: 10%;
+    top: 10%;
+    left: 30%;
     box-sizing: border-box;
+    border-radius: 15px;
     padding-top: 50px;
     text-align: center;
     background: white;
@@ -76,4 +78,21 @@
     height: 50px;
     font-size: 15px;
     color: black;
+  }
+
+  #button-6, #login-button{
+    font-size: 14px;
+    text-transform: uppercase;
+    font-weight: bold;
+  }
+
+  #login-checked{
+      text-transform: uppercase;
+      font-weight: bold;
+      color: rgb(55,56,103);
+  }
+
+  .login-form div{
+      font-size: 13px;
+      height: 15px;
   }
