--- a/Semana-07/views/employee-signup.html
+++ b/Semana-07/views/employee-signup.html
@@ -88,7 +88,7 @@
                 <section class="all">
                     <div class="sign-up">
                         <h2>sign up</h2>
-                        <form action="" class="signup-form">
+                        <form class="signup-form">
                             <div class="form1">
                                 <label for="name">
                                     Name
@@ -168,7 +168,6 @@
                             </div>
                         </form>
                         <button id="su-button">Create</button>
-                    </div>
                 </section>
             </div>
             <section class="ordered-lists">
