BaSP-W07-M2022: updated css styles, made a better responsive layout

--- a/Semana-07/styles/styles.css
+++ b/Semana-07/styles/styles.css
@@ -6,6 +6,13 @@ body {
     overflow-x: hidden;
 }
 
+#signup-checked, #login-checked {
+    font-size: 14px;
+    text-transform: uppercase;
+    font-weight: bold;
+    color: rgb(55,56,103);
+}
+
 /* media querys */
 
 @media (min-width:768px) {
@@ -78,31 +85,31 @@ body {
 
     /*contact us*/
 
-    .contact-us button {
+    .contact-us button{
         transform: scale(1.1);
     }
 
-    .sign-up {
+    .sign-up{
         font-size: 14px;
     }
 
-    .signup-form {
+    .signup-form{
         flex-wrap: wrap;
-        height: 200px;
+        height: 350px;
     }
 
-    .form1, .form2 {
+    .form1, .form2{
         width: 45%;
     }
 
-    #su-button {
-        margin-top: 150px;
-    }
-
-    .login {
+    .login{
         width: 40%;
     }
 
+    .overlay div {
+        width: 40%;
+        left: 30%;
+    }
 }
 
 @media (min-width:1024px) {
@@ -256,12 +263,11 @@ body {
         width: 40%;
     }
 
-    .popup {
-        width: 20%;
-        height: 10%;
-        top: 25%;
+    .overlay div {
+        width: 30%;
+        top: 15%;
         left: 40%;
-      }
+    }
 
 }
 
