BaSP-W07-M2022: final changes, updated styles, changed date placeholder and update the readme file

--- a/Semana-07/views/employee-signup.html
+++ b/Semana-07/views/employee-signup.html
@@ -108,7 +108,7 @@
                                 <label for="dob">
                                     Date of birth
                                 </label>
-                                <input id="dob" type="text" placeholder="dd/mm/yyyy">
+                                <input id="dob" type="text" placeholder="mm/dd/yyyy">
                                 <div class="dob-alert"></div>
                                 <label for="phone">
                                     Phone
