--- a/Semana-07/styles/employee-signup.css
+++ b/Semana-07/styles/employee-signup.css
@@ -78,25 +78,29 @@
     flex-direction: column;
     align-items: center;
     width: 50%;
-    height: 25%;
+    height: 30%;
     top: 10%;
     left: 25%;
     box-sizing: border-box;
     border-radius: 15px;
     padding-top: 50px;
+    padding-left: 20px;
+    padding-right: 20px;
     text-align: center;
     background: white;
 }
  
 .popup span {
     height: 50px;
-    font-size: 15px;
+    font-size: 14px;
     color: black;
+    padding-top: 5px;
 }
 .form1 div, .form2 div {
     color: red;
     height: 15px;
-    font-size: 13px;
+    font-size: 12px;
+    font-style: italic;
 }
 
 
